desenvolvimento HTML - segunda seção completa

--- a/index.html
+++ b/index.html
@@ -15,13 +15,28 @@
   </head>
   
   <main>
-    <section>
+    <>
         <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzzle colorido">
         <h1>O futoro Brilhante da Web 3.0?</h1>
         <p>Nós mergulhamos na proxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas sera que ela realmente esta cumprindo sua promessa?</p>
         <button>Ler mais</button>
+    </section>
 
-        
+    <section>
+        <h2>Novo</h2>
+
+        <div>
+            <h3>Hidrogênio VS Carros Eletricos</h3>
+            <p>os carros movidos a Hidrogênio alguma vez alcançarão os veiculos Eletricos?</p>
+        </div>
+        <div>
+            <h3>A arte gerada pro IA</h3>
+            <p>Quais são os possiveis efeitos adversos da geração de imagens por IA sob demanda?</p>
+        </div>
+        <div>
+            <h3>O VC Funding está esgotado?</h3>
+            <p>O financiamento privado por empresas de capital de risco caiu 50%</p>
+        </div>
     </section>
   </main>
 </body>
