desenvolvimento do HTML - terceira seção completa. HTML mobile completo

--- a/index.html
+++ b/index.html
@@ -38,6 +38,37 @@
             <p>O financiamento privado por empresas de capital de risco caiu 50%</p>
         </div>
     </section>
+
+    <section>
+        <div>
+            <img src="./assets/images/image-retro-pcs.jpg" alt="imagen de computadores antigos">
+
+            <div>
+                <strong>01</strong>
+                <h2>Revivendo PCs atingos</h2>
+                <p>E se PCs antigos pudesses receber peças modernas?</p>
+            </div>
+        </div>
+
+
+        <div>
+            <img src="./assets/images/image-top-laptops.jpg" alt="imagen de laptops">
+            <div>
+                <strong>02</strong>
+                <h2>Top 10 laptops de 2024</h2>
+                <p>Nosssas melhores escolhas para diversas necessidades.</p>
+            </div>
+        </div>
+
+        <div>
+            <img src="./assets/images/image-gaming-growth.jpg" alt="imagen de um controle de video gamer">
+            <div>
+                <strong>03</strong>
+                <h2>O Crecimento dos jogos </h2>
+                <p>Como a pandemia tem gerado novas oportunidades.</p>
+            </div>
+        </div>
+    </section>
   </main>
 </body>
 </html>
