--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <button>Ler mais</button>
     </section>
 
-    <section>
+    <section class="segunda-seção">
         <h2>Novo</h2>
 
-        <div>
+        <div class="bb mb pb">
             <h3>Hidrogênio VS Carros Eletricos</h3>
             <p>os carros movidos a Hidrogênio alguma vez alcançarão os veiculos Eletricos?</p>
         </div>
