CSS básico completo

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <section class="segunda-seção">
         <h2>Novo</h2>
 
-        <div class="bb mb pb">
+        <div class="margin-bottom-padding">
             <h3>Hidrogênio VS Carros Eletricos</h3>
             <p>os carros movidos a Hidrogênio alguma vez alcançarão os veiculos Eletricos?</p>
         </div>
-        <div>
+        <div class="margin-bottom-padding">
             <h3>A arte gerada pro IA</h3>
             <p>Quais são os possiveis efeitos adversos da geração de imagens por IA sob demanda?</p>
         </div>
@@ -46,7 +46,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="terceira-seção">
         <div>
             <img src="./assets/images/image-retro-pcs.jpg" alt="imagen de computadores antigos">
 
