--- a/index.html
+++ b/index.html
@@ -12,13 +12,26 @@
     <link rel="stylesheet" href="style.css">
     <title>W. Noticias</title>
 </head>
-<body>
+<body class="menu-open">
   <head class="header-mobile">
     <img src="./assets/images/logo.svg" alt="logo do site de notícias W.">
 
     <button>
         <img src="./assets/images/icon-menu.svg" alt="ìcone do menu hanburguer">
     </button>
+
+    <nav>
+        <button>
+            <img src="./assets/images/icon-menu-close.svg" alt="icone de x para fechar o menu">
+        </button>
+
+        <a href="#">Home</a>
+        <a href="#">Novo</a>
+        <a href="#">Popular</a>
+        <a href="#">Trending</a>
+        <a href="#">Categorias</a>
+    </nav>
+
   </head>
   
   <main>
