--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         </picture>
 
         <h1>O futoro Brilhante da Web 3.0?</h1>
-        <p>Nós mergulhamos na proxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas sera que ela realmente esta cumprindo sua promessa?</p>
+        <div>
+            <p>Nós mergulhamos na proxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas sera que ela realmente esta cumprindo sua promessa?</p>
         <button>Ler mais</button>
+        </div>
     </section>
 
     <section class="segunda-seção">
