--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
 
             <div>
                 <strong>01</strong>
-                <h2>Revivendo PCs atingos</h2>
+                <a href="#">
+                    <h2>Revivendo PCs atingos</h2>
+                </a>
                 <p>E se PCs antigos pudesses receber peças modernas?</p>
             </div>
         </div>
@@ -89,7 +91,9 @@
             <img src="./assets/images/image-top-laptops.jpg" alt="imagen de laptops">
             <div>
                 <strong>02</strong>
-                <h2>Top 10 laptops de 2024</h2>
+                <a href="#">
+                    <h2>Top 10 laptops de 2024</h2>
+                </a>
                 <p>Nossas melhores escolhas para diversas necessidades.</p>
             </div>
         </div>
@@ -98,7 +102,9 @@
             <img src="./assets/images/image-gaming-growth.jpg" alt="imagen de um controle de video gamer">
             <div>
                 <strong>03</strong>
-                <h2>O Crecimento dos jogos </h2>
+                <a href="#">
+                    <h2>O Crecimento dos jogos </h2>
+                </a>
                 <p>Como a pandemia tem gerado novas oportunidades.</p>
             </div>
         </div>
